# atb-ai-agent

./: .gitignore  README.md  cli_tools.py  main.py  pyproject.toml  tools.py
.claude/: settings.json
.claude/commands/: security-check.md
.claude/hooks/: git-safe.sh  log_agent_actions.py
.claude/output-styles/: atb-assistant.md
data/: README.md
