[project]
name = "atb-ai-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "claude-agent-sdk==0.1.50",
    "click==8.3.1",
    "cryptography==46.0.6",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "markdown-it-py==4.0.0",
    "mcp==1.26.0",
    "mdurl==0.1.2",
    "nest-asyncio==1.6.0",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "pyjwt==2.12.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "referencing==0.37.0",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "six==1.17.0",
    "sse-starlette==3.3.3",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.42.0",
]
